--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-07-20  Michael Kelly  <pioto@pioto.org>
+
+	* New version - 0.1.1
+
+	* Update to pass "${USERLAND}-${ELIBC}" as the unique system
+	identifier, instead of just USERLAND.
+
 2006-07-19  Michael Kelly  <pioto@pioto.org>
 
 	* Initial build - version 0.1.0
