--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,24 @@
-2006-07-24  Michael Kelly  <pioto@pioto.org>
+2006-07-26  Mike Kelly  <pioto@pioto.org>
 
-        * Make use of ${scriptdir}/db.sh to interface with the backend
-        db instead of doing it directly ourselves.
+	* pre_setup/dynusers.bash.in: Use the add.sh from dynusers to do all
+	the heavy lifting, we just feed it a few raw variables.
 
-        * Drop the s from the user and group DBDIR subdirs.
+2006-07-24  Mike Kelly  <pioto@pioto.org>
 
-2006-07-20  Michael Kelly  <pioto@pioto.org>
+	* post_postrm/dynusers.bash.in: Make use of ${scriptdir}/db.sh to
+	interface with the backend db	instead of doing it directly
+	ourselves.
 
-	* New version - 0.1.1
+	* post_postrm/dynusers.bash.in: Drop the s from the user and group
+	DBDIR subdirs.
 
-	* Update to pass "${USERLAND}-${ELIBC}" as the unique system
-	identifier, instead of just USERLAND.
+2006-07-20  Mike Kelly  <pioto@pioto.org>
 
-2006-07-19  Michael Kelly  <pioto@pioto.org>
+	+ Release: 0.1.1
 
-	* Initial build - version 0.1.0
+	* post_postrm/dynusers.bash.in: Update to pass "${USERLAND}-${ELIBC}"
+	as the unique system identifier, instead of just USERLAND.
+
+2006-07-19  Mike Kelly  <pioto@pioto.org>
+
+	+ Release: 0.1.0
