--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-28  Mike Kelly  <pioto@pioto.org>
+
+	+ Release: 0.2.0
+
 2006-07-27  Mike Kelly  <pioto@pioto.org>
 
 	* post_postrm/dynusers.bash.in: Remove unnecessary sourcing of
